# haskell-kata

./: CHANGELOG.md  LICENSE  haskell-kata.cabal
src/main/: Kata.hs  Main.hs
src/test/: KataSpec.hs
