name:                haskell-kata
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Matthijs Thoolen
maintainer:          mjjthoolen@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

library
  hs-source-dirs:
      src/main
  ghc-options: 
  build-depends:
      base >=4.12 && <4.13
  exposed-modules:
      Kata
  other-modules:
  default-language: Haskell2010

executable haskell-kata
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.13,
                       hspec
  hs-source-dirs:      src/main
  default-language:    Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      src/test
  ghc-options: 
  build-depends:
      base ==4.*
    , hspec ==2.*
    , haskell-kata
  other-modules:
      KataSpec
  default-language: Haskell2010
  build-tool-depends: hspec-discover:hspec-discover == 2.*